--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,9 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
+.container {
+    margin-top: 500px;
+}
+
 .card {
     width: 34rem;
     border-radius: 0px;
