--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,12 +1,12 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
 .container {
-    margin-top: 500px;
+    margin-top: 350px;
 }
 
 .card {
     width: 34rem;
     border-radius: 0px;
     background: #ffffff;
-    box-shadow:  29px 29px 58px #d4d4d4, -29px -29px 58px #ffffff;
+    box-shadow: 5px 5px 0px 0px rgb(237, 238, 238), 10px 10px 0px 0px rgb(223, 223, 223), 5px 5px 15px 5px rgba(0,0,0,0);
 }
