--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,10 @@
 @import "~bootstrap/scss/bootstrap.scss";
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 
+body {
+    background: silver;
+}
+
 .container {
     margin-top: 350px;
 }
@@ -12,13 +16,13 @@
 
 .todoInput {
     border-style: hidden;
-    background: white;
+    background-color: white;
     outline: none;
 }
 
 .card {
     width: 34rem;
     border-radius: 0px;
-    background: #ffffff;
+    background-color: #ffffff;
     box-shadow: 5px 5px 0px 0px rgb(237, 238, 238), 10px 10px 0px 0px rgb(223, 223, 223), 5px 5px 15px 5px rgba(0,0,0,0);
 }
